--- a/Ingscale.cabal
+++ b/Ingscale.cabal
@@ -14,23 +14,25 @@ cabal-version:       >=1.10
 
 Library
   ghc-options:        -Wall
-  Build-Depends:	base >= 4.7 && < 5
-                      , utf8-string
-                      , MissingH
-                      , text
+  Build-Depends:	MissingH
+                      , base >= 4.7 && < 5
+                      , formatting >= 6.2.2
                       , split
+                      , text
+                      , utf8-string
   Exposed-modules:      Ingscale
   default-language:    Haskell2010
 
 
 executable ingscale
   main-is:           ingscale.hs
-  build-depends:	base >= 4.7 && < 5
-                      , utf8-string
-                      , MissingH
-                      , text
-                      , split
+  build-depends:	MissingH
+                      , base >= 4.7 && < 5
+                      , formatting >= 6.2.2
                       , optparse-applicative
+                      , split
+                      , text
+                      , utf8-string
   other-modules:        Ingscale
   ghc-options:       -Wall
   default-language:  Haskell2010
