--- a/Ingscale.cabal
+++ b/Ingscale.cabal
@@ -13,8 +13,10 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 Library
+  hs-source-dirs:    src/lib
+  default-language:    Haskell2010
   ghc-options:        -Wall
-  Build-Depends:	MissingH
+  build-depends:	MissingH
                       , base >= 4.7 && < 5
                       , containers >= 0.5.6.2
                       , formatting >= 6.2.2
@@ -23,20 +25,15 @@ Library
                       , text
                       , utf8-string
   Exposed-modules:      Ingscale
-  default-language:    Haskell2010
 
 
 executable ingscale
-  main-is:           ingscale.hs
+  default-language:  Haskell2010
+  ghc-options:       -Wall
+  hs-source-dirs:    src
+  main-is:           Main.hs
   build-depends:	MissingH
                       , base >= 4.7 && < 5
-                      , lens >= 4.13 && < 5
-                      , containers >= 0.5.6.2
-                      , formatting >= 6.2.2
                       , optparse-applicative
-                      , split
-                      , text
-                      , utf8-string
-  other-modules:        Ingscale
-  ghc-options:       -Wall
-  default-language:  Haskell2010
+                      , Ingscale
+
