--- a/Ingscale.cabal
+++ b/Ingscale.cabal
@@ -16,8 +16,7 @@ Library
   hs-source-dirs:    src/lib
   default-language:    Haskell2010
   ghc-options:        -Wall
-  build-depends:	MissingH
-                      , base >= 4.7 && < 5
+  build-depends:	base >= 4.7 && < 5
                       , containers >= 0.5.6.2
                       , formatting >= 6.2.2
                       , lens >= 4.13 && < 5
@@ -37,7 +36,7 @@ executable ingscale
   ghc-options:       -Wall
   hs-source-dirs:    src
   main-is:           Main.hs
-  build-depends:	MissingH
-                      , base >= 4.7 && < 5
+  build-depends:	base >= 4.7 && < 5
                       , optparse-applicative
                       , Ingscale
+                      , text
