Cabal version integration.

--- a/Ingscale.cabal
+++ b/Ingscale.cabal
@@ -40,3 +40,4 @@ executable ingscale
                       , optparse-applicative
                       , Ingscale
                       , text
+  other-modules:        Paths_Ingscale
