--- a/Ingscale.cabal
+++ b/Ingscale.cabal
@@ -15,6 +15,7 @@ cabal-version:       >=1.10
 Library
   ghc-options:        -Wall
   Build-Depends:	MissingH
+--                      , QuickCheck >= 2.8.1
                       , base >= 4.7 && < 5
                       , formatting >= 6.2.2
                       , split
@@ -27,6 +28,7 @@ Library
 executable ingscale
   main-is:           ingscale.hs
   build-depends:	MissingH
+--                      , QuickCheck >= 2.8.1
                       , base >= 4.7 && < 5
                       , formatting >= 6.2.2
                       , optparse-applicative
@@ -36,3 +38,20 @@ executable ingscale
   other-modules:        Ingscale
   ghc-options:       -Wall
   default-language:  Haskell2010
+
+Test-Suite tests
+  default-language:    Haskell2010
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      tests/
+  main-is:             Main.hs
+  build-depends:       HUnit
+                     , Ingscale
+                     , QuickCheck >= 2.8.1
+                     , base >= 4.7 && < 5
+                     , test-framework >= 0.8.1.1
+                     , test-framework-hunit
+                     , test-framework-quickcheck2
+                     , text
+--  other-modules:        Ingscale
+  ghc-options:         -Wall
+  cpp-options:  -DTEST
